_BACKUP/z_HTML-VERSIONS/version2/bgoonz42.gitbook.io/datastructures-in-pytho/practice/untitled/array/extra-array.md
<a href="../../../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--small-5fbe8ad7" />

<a href="../../../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--medium-5fbe8af6" />

<a href="https://bgoonz-blog.netlify.app/#gsc.tab=0" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Main Blog</span></span></a>

<a href="https://www.notion.so/webdevhub42/Python-Data-Structures-Unit-1da9a5d55db844f4b62aff6fd2b4d1ce" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Notion Notes</span></span></a>

<a href="https://bgoonz-branch-the-algos.vercel.app/" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">The Algorithms</span></span></a>

<a href="https://thealgorithms.netlify.app/#" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Python Module Website</span></span></a>

<a href="../../../index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Home</span></a>

<a href="../../../navigation.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Navigation</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Cirriculumn</span></span>

<a href="../../../cirriculumn/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk17</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk18</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk19</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk20</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Utilities</span></span>

<a href="../../../utilities/code-lab-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code lab Notebooks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Repl.IT</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Utilites</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">practice</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Supplemental Practice:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Abstract Data Structures:</span>

<a href="../untitled-7.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Untitled</span></a>

<a href="../industry-standard-algorithms.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Industry Standard Algorithms</span></a>

<a href="../interview-practice-resources.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Practice Resources</span></a>

<a href="../overflow-practice-problems.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Overflow Practice Problems</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Array</span>

<a href="extra-array.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca--navButtonOpened-6a88552e"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Extra-Array</span></a>

<a href="../stack.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Stack</span></a>

<a href="../queue.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue</span></a>

<a href="../queue-sandbox.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue Sandbox</span></a>

<a href="../binary-search.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Search</span></a>

<a href="../bst-explained.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">BST Explained</span></a>

<a href="../binary-tree.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Tree</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Search Tree</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Recursion</span>

<a href="../untitled-5.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Hash Table</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Linked List</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Sorting</span>

<a href="../untitled-2.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Searching</span></a>

<a href="../untitled-1.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Graphs</span></a>

<a href="../untitled.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Exotic</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Resources</span></span>

<a href="../../../resources/python-vs-javascript.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python VS JavaScript</span></a>

<a href="../../../resources/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Misc. Resources</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Things To Internalize:</span>

<a href="../../../resources/intro-to-python-w-jupyter-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro To Python w Jupyter Notebooks</span></a>

<a href="../../../resources/calculating-big-o.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Calculating Big O</span></a>

<a href="../../../resources/python-cheat-sheet.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Cheat Sheet</span></a>

<a href="../../../resources/code-signal-cga-sprint-resources.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code Signal CGA Sprint Resources</span></a>

<a href="../../../resources/youtube.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Youtube</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Links</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">quick-reference</span></span>

<a href="../../../misc/untitled/python-snippets.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../../../quick-reference/python-module-index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Module Index:</span></a>

<a href="../../../quick-reference/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Info</span></a>

<a href="../../../quick-reference/python-glossary.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Glossary</span></a>

<a href="../../../quick-reference/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">index</span></a>

<a href="../../../bash-commands.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Of Python Cheat Sheets</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Python-Docs</span></span>

<a href="../../../stdlib/basic-syntax.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Basic Syntax</span></a>

<a href="../../../stdlib/python-standard-library-stdlib.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Standard Library (STDLIB)</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Docs</span>

<a href="../../../stdlib/built-in-functions.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built In Functions</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Lists</span>

<a href="../../../stdlib/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes</span>

<a href="../../../stdlib/queue-and-stacks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue &amp; Stacks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">MISC</span></span>

<a href="../../../interview-prep/interview-resources/unsorted-examples.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Unsorted Examples</span></a>

<a href="../../../misc/outline.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">About Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Interview Prep</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Resources</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Installations Setup & Env</span></span>

<a href="../../../installations-setup-and-env/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">python-setup</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Aux-Exploration</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Subject</span>

<a href="https://www.gitbook.com/?utm_source=content&amp;utm_medium=trademark&amp;utm_campaign=bgoonz42" class="reset-3c756112--trademark-a8da4b94"></a>

<span class="text-4505230f--TextH200-a3425406--textUIFamily-5ebd8e40">Powered by **GitBook**</span>

<span class="text-4505230f--DisplayH900-bfb998fa--textContentFamily-49a318e1">Extra-Array</span>
================================================================================================

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1245b09a8f474640b4e9f80f6c59a05b"><span data-offset-key="1245b09a8f474640b4e9f80f6c59a05b:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d2f8b32c2eb4409c9438dde0108284a0"><span data-offset-key="d2f8b32c2eb4409c9438dde0108284a0:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">recur-bin-search.py</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Second Tab</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Array Change</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">recur-bin-search.py</span>

    # given array a and need to find value x# left and right correspond to initial indices of array a bounding the search# segment of array a above and below, respectivelydef binary_search_recursive(a, x, left=0, right=(len(a)-1)):    #"""Recursive Binary Search algorithm implemented using list indexing"""    index = (left+right)//2    if a[index] == x:        return index    elif x > (a[right]) or x < a[left]:  # first case where x is not in the list!        return -1    elif left == right:  # case where search is complete and no value x not found        return -1    elif left == right-1:  # case where there are only two numbers left, check both!        left = right        return binary_search_recursive(a, x, left, right)    elif a[index] < x:        left = index        return binary_search_recursive(a, x, left, right)    elif a[index] > x:        right = index        return binary_search_recursive(a, x, left, right)​

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Second Tab</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ce9170c97ef2476ea429a55f558f7e86"><span data-offset-key="ce9170c97ef2476ea429a55f558f7e86:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Array Change</span>

    def arrayChange(inputArray):    count = 0    for i in range(1, len(inputArray)):        if inputArray[i - 1] >= inputArray[i]:            difference = inputArray[i - 1] - inputArray[i]            inputArray[i] += difference + 1            count += difference + 1    return count​

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a63f623eb6274979902a10f99dbe7ed0"><span data-offset-key="a63f623eb6274979902a10f99dbe7ed0:0"><span data-slate-zero-width="n">​</span></span></span></span>

    class Array(object):    def __init__(self, size, defaultValue = None):        self.size = size        if(defaultValue == None):            self.items = list()            for i in range(size):                self.items.append(defaultValue)        else:            self.items = list()​            if(len(defaultValue) == size or len(defaultValue) < size):                for j in range(len(defaultValue)):                    if(defaultValue[j]):                        self.items.append(defaultValue[j])                for i in range(len(defaultValue), size):                    self.items.append(None)            else:                print('Elements are more than the size specified')​    def myLen(self):        length = 0        for i in self.items:            if i == None:                continue            else:                length += 1        return length​    def insertFirst(self, element):        if (self.myLen() < self.size):            for i in range(self.myLen(), 0, -1):                self.items[i] = self.items[i - 1]            self.items[0] = element        else:            print('Element index out of range')​    def insertAtIndex(self, index, element):        if (self.myLen() < self.size):            for i in range(self.myLen(), index, -1):                self.items[i] = self.items[i - 1]            self.items[index] = element        else:            print('Element index out of range')​    def insertAfterIndex(self, index, element):        if (self.myLen() < self.size):            for i in range(self.myLen(), index + 1, -1):                self.items[i] = self.items[i - 1]            self.items[index + 1] = element        else:            print('Element index out of range')​    def insertBeforeIndex(self, index, element):        if (self.myLen() < self.size):            for i in range(self.myLen(), index - 1, -1):                self.items[i] = self.items[i - 1]            self.items[index - 1] = element        else:            print('Element index out of range')​    def delete(self, element):        if element in self.items:            Index = self.items.index(element)            self.items[Index] = None        else:            print('This element is not in the Array!')​    def search(self, element):        if element in self.items:            position = 0            for i in range(self.myLen()):                if(self.items[i] == element):                    break                else:                    position += 1​            print('Element {} found at position {}'.format(element, position))        else:            print('This element is not in the Array!')​if __name__ == '__main__':    myArray = Array(5, [1])    print(myArray.items, myArray.myLen())          myArray.insertFirst(3)    print(myArray.items, myArray.myLen())           myArray.insertAfterIndex(1,4)    print(myArray.items, myArray.myLen())         myArray.insertBeforeIndex(3,5)    print(myArray.items, myArray.myLen())           myArray.delete(5)    print(myArray.items, myArray.myLen())           myArray.search(4)                          

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="0ce67636b897486ca3dfd1ceb72fc256"><span data-offset-key="0ce67636b897486ca3dfd1ceb72fc256:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="8682de9035a94426a1c01db92e28f630"><span data-offset-key="8682de9035a94426a1c01db92e28f630:0">Create Array Class</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="52e4f2b001774e688ebe9da8de4d9774"><span data-offset-key="52e4f2b001774e688ebe9da8de4d9774:0">Now, first, let’s create a custom class named Array which implements all the above functionalities in it.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c5b1a02ef9ad412d8b5459a1b3bdb597"><span data-offset-key="c5b1a02ef9ad412d8b5459a1b3bdb597:0">So now let’s define a constructor using init method in Python which accepts 2 arguments along with the self-object that is the size and the default value for Array elements.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="11753c9aa5164c77b707ee2b94f18cae"><span data-offset-key="11753c9aa5164c77b707ee2b94f18cae:0">Here, size is defined which is the static size of the array and the default value means the value assigned to elements while creating a new array.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ef876b01290049bebd78fecc34e5d33a"><span data-offset-key="ef876b01290049bebd78fecc34e5d33a:0">Now what we need is that if the size is only initialized then we must initialize all elements to default Value that is None.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4cc480071e004cae997d3d9f5539e921"><span data-offset-key="4cc480071e004cae997d3d9f5539e921:0">Otherwise, if both parameters are initialized, then initialize the list with these values the user passed as an argument.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c6048d7dd2034cba90fdd724e2e881b5"><span data-offset-key="c6048d7dd2034cba90fdd724e2e881b5:0">If the length of the default value list is less than size, then initialize other elements to “None”.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c6cafccecfb54ae983f497d8a5de15ef"><span data-offset-key="c6cafccecfb54ae983f497d8a5de15ef:0">If the length of the list passed is greater than size user passed then simply return the program with the error message “Elements are more than the size specified”.</span></span></span>

    class Array(object):    def __init__(self, size, defaultValue = None):        self.size = size        if(defaultValue == None):            self.items = list()            for i in range(size):                self.items.append(defaultValue)        else:            self.items = list()​            if(len(defaultValue) == size or len(defaultValue) < size):                for j in range(len(defaultValue)):                    if(defaultValue[j]):                        self.items.append(defaultValue[j])                for i in range(len(defaultValue), size):                    self.items.append(None)            else:                print('Elements are more than the size specified')

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b8252eb1fbb94c86b3d7fa04b1b37c17"><span data-offset-key="b8252eb1fbb94c86b3d7fa04b1b37c17:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="09b5c4e868034e51abc2fab76eb733fe"><span data-offset-key="09b5c4e868034e51abc2fab76eb733fe:0"><span data-slate-zero-width="n">​</span></span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="d848f3e720dd4aa2937ce4f9f342bf2f"><span data-offset-key="d848f3e720dd4aa2937ce4f9f342bf2f:0">Define Length of Array Function</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="54c074e5a4d9468c95d03030f1664a80"><span data-offset-key="54c074e5a4d9468c95d03030f1664a80:0">This function is used to return the length of the Array that means the elements we initialized excluding None values from it.</span></span></span>

        def myLen(self):        length = 0        for i in self.items:            if i == None:                continue            else:                length += 1        return length

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="4dd0a72bc7a84000af36fed56463c2a1"><span data-offset-key="4dd0a72bc7a84000af36fed56463c2a1:0">Define Insert First Array Function</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0c59433f23c042308b7ccb07e34051fa"><span data-offset-key="0c59433f23c042308b7ccb07e34051fa:0">This function is used to insert or add the element to the beginning of the array.</span></span></span>

        def insertFirst(self, element):        if (self.myLen() < self.size):            for i in range(self.myLen(), 0, -1):                self.items[i] = self.items[i - 1]            self.items[0] = element        else:            print('Element index out of range')

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="3380dc36ebdc414ba073d9117fe68a5b"><span data-offset-key="3380dc36ebdc414ba073d9117fe68a5b:0">Define Insert At Index Function</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="69bdd571ad2348068e726e32eaaa870f"><span data-offset-key="69bdd571ad2348068e726e32eaaa870f:0">This function is used to insert or add an element at a particular index or position which the user passed along with the element to insert.</span></span></span>

        def insertAtIndex(self, index, element):        if (self.myLen() < self.size):            for i in range(self.myLen(), index, -1):                self.items[i] = self.items[i - 1]            self.items[index] = element        else:            print('Element index out of range')

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="726a95eae14b431dac238ad8545830f6"><span data-offset-key="726a95eae14b431dac238ad8545830f6:0">Define Insert After Index Function</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="33394c8aaff847408152856572e1a11d"><span data-offset-key="33394c8aaff847408152856572e1a11d:0">This function is used to insert or add an element after a particular index or position which the user passed along with the element to insert.</span></span></span>

        def insertAfterIndex(self, index, element):        if (self.myLen() < self.size):            for i in range(self.myLen(), index + 1, -1):                self.items[i] = self.items[i - 1]            self.items[index + 1] = element        else:            print('Element index out of range')

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="d54b22be68a648f584b01b49294b5bb5"><span data-offset-key="d54b22be68a648f584b01b49294b5bb5:0">Define Insert Before Index Function</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b5f877122fe94b04a06c438fba8fa42c"><span data-offset-key="b5f877122fe94b04a06c438fba8fa42c:0">This function is used to insert or add an element before a particular index or position which the user passed along with the element to insert.</span></span></span>

        def insertBeforeIndex(self, index, element):        if (self.myLen() < self.size):            for i in range(self.myLen(), index - 1, -1):                self.items[i] = self.items[i - 1]            self.items[index - 1] = element        else:            print('Element index out of range')

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="8a4e6bc56f1d4243b447d8eea8f0367e"><span data-offset-key="8a4e6bc56f1d4243b447d8eea8f0367e:0">Define Delete Function</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6a33058024584778adbd4e7c6f87809f"><span data-offset-key="6a33058024584778adbd4e7c6f87809f:0">This function is used to remove or delete a particular element from our array or if not present then simply print the error that the element is not found in this array.</span></span></span>

        def delete(self, element):        if element in self.items:            Index = self.items.index(element)            self.items[Index] = None        else:            print('This element is not in the Array!')

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="22026a58fdc94e99a8dfd1c165135c56"><span data-offset-key="22026a58fdc94e99a8dfd1c165135c56:0">Define Search Function</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5d85dfde6b5f48e99ffbb36fd4b4b2bd"><span data-offset-key="5d85dfde6b5f48e99ffbb36fd4b4b2bd:0">This function is used to search or find the element which is passed by the user to return the index or position.</span></span></span>

        def search(self, element):        if element in self.items:            position = 0            for i in range(self.myLen()):                if(self.items[i] == element):                    break                else:                    position += 1​            print('Element {} found at position {}'.format(element, position))        else:            print('This element is not in the Array!')

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="557af2d5997f4e159b6e380184086c6b"><span data-offset-key="557af2d5997f4e159b6e380184086c6b:0">Define Main Condition</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a3bcd9ab2a28460d8b90f8768c0d9239"><span data-offset-key="a3bcd9ab2a28460d8b90f8768c0d9239:0">Now, we have implemented all the functions of our custom Array class.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="930334036c414cd1ac95685fc8296a99"><span data-offset-key="930334036c414cd1ac95685fc8296a99:0">So, now what we need is to check whether the functionality of these methods are working or not.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="252187c456694a62bfc76c95c918da3a"><span data-offset-key="252187c456694a62bfc76c95c918da3a:0">For that, create an instance of the Array Class and initialize it with array size and the values it needs to insert at the beginning.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a3b19bde620f46eaa631cbd998e80b17"><span data-offset-key="a3b19bde620f46eaa631cbd998e80b17:0">Then, just use the object to call all the functions one by one.</span></span></span>

    if __name__ == '__main__':    myArray = Array(5, [1])    print(myArray.items, myArray.myLen())          myArray.insertFirst(3)    print(myArray.items, myArray.myLen())           myArray.insertAfterIndex(1,4)    print(myArray.items, myArray.myLen())         myArray.insertBeforeIndex(3,5)    print(myArray.items, myArray.myLen())           myArray.delete(5)    print(myArray.items, myArray.myLen())           myArray.search(4)   

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="49100fdd40bc4c2797dee2e9b2b7fa5d"><span data-offset-key="49100fdd40bc4c2797dee2e9b2b7fa5d:0"><span data-slate-zero-width="n">​</span></span></span></span>

<a href="../array.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardPrevious-56a5e674"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Previous</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Array</span>

<a href="../stack.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardNext-19241c42"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Next</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Stack</span>

<img src="https://avatars.githubusercontent.com/u/66654881?v=4" class="image-67b14f24--avatar-1c1d03ec" />

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Last updated 58 minutes ago</span>

<a href="https://github.com/bgoonz/python-gitbook/blob/master/practice/untitled/array/extra-array.md" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageSideMenuItem-22949732"></a>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Edit on GitHub</span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Export as PDF</span>
